--- a/res/layout/shared_item_list.xml
+++ b/res/layout/shared_item_list.xml
@@ -73,12 +73,13 @@
 		android:clickable="false">
 	    
 	    <com.mega.components.RoundedImageView 
-	         android:id="@+id/contact_list_thumbnail"
+	         android:id="@+id/contact_list_thumbnail_share"
 	         android:layout_width="54dp"
 	         android:layout_height="54dp"
 	         android:layout_marginLeft="5dp" 
 	         android:scaleType="fitCenter"
 	         android:paddingTop="3dp"
+	         android:paddingBottom="3dp"
 	         rounded:corner_radius="27dp" 
 	         rounded:border_width="2dp"
 	         rounded:border_color="@color/border_file_properties"/>
@@ -87,21 +88,20 @@
 	        android:id="@+id/shared_contact_name"
 	        android:layout_width="wrap_content"
 	        android:layout_height="30dp"
-	        android:layout_toRightOf="@id/contact_list_thumbnail"
-	        android:paddingLeft="5dp"
-	        android:paddingTop="7dp" 
+	        android:layout_toRightOf="@id/contact_list_thumbnail_share"
+	        android:paddingTop="10dp"
 	        android:textColor="@color/white"/>  
-	    
+<!--      
 	    <TextView
 	        android:id="@+id/shared_contact_content"
 	        android:layout_width="wrap_content"
-	        android:layout_height="30dp"
-	        android:layout_toRightOf="@id/contact_list_thumbnail"
+	        android:layout_height="50dp"
+	        android:layout_toRightOf="@id/contact_list_thumbnail_share"
 	        android:layout_below="@id/shared_contact_name"
 	        android:paddingLeft="5dp"
 	        android:paddingBottom="7dp"
 	        android:textColor="@color/white"/>
-    
+    -->	
 	</RelativeLayout>
     
     
