--- a/res/layout/activity_manager.xml
+++ b/res/layout/activity_manager.xml
@@ -11,6 +11,49 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+<!-- THE CONTACTS TABS -->
+
+	<TabHost
+        android:id="@android:id/tabhost"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"/>
+
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="0"/>
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/contact_tabs_pager"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+    </TabHost>
+
+
+
+<!-- <android.support.v4.view.ViewPager
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/contact_tabs_pager"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />-->
+
 <!-- THE DRAWER -->	
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
