--- a/res/layout/fragment_contact_properties.xml
+++ b/res/layout/fragment_contact_properties.xml
@@ -1,132 +1,69 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rounded="http://schemas.android.com/apk/res-auto"
     xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/black"
     tools:context=".FilePropertiesFragment" >
-    
-    <RelativeLayout 
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent">
 
-     <com.mega.components.RoundedImageView 
-         android:id="@+id/contact_properties_image"
-         android:layout_width="270dp"
-         android:layout_height="270dp"
-         android:layout_centerHorizontal="true"
-         android:paddingLeft="30dp"
-         android:paddingRight="30dp"
-         rounded:corner_radius="10dp" 
-         rounded:border_width="2dp"
-         rounded:border_color="@color/border_file_properties"
-         android:paddingBottom="10dp" 
-         android:paddingTop="10dp"/>
-     
-     <RelativeLayout
-         android:id="@+id/contact_properties_content"
-         android:layout_width="fill_parent"
-         android:layout_height="60dp"
-         android:background="@color/contact_properties_content_layout"
-         android:orientation="horizontal"
-         android:layout_below="@id/contact_properties_image">
-         
-         <TableLayout       		
-             	android:id="@+id/contact_properties_content_table"
-       		    android:layout_width="fill_parent"
-       		    android:layout_height="60dp" 
-       		    android:layout_gravity="center"
-       		    android:background="@drawable/selectable_background_mega" >
-       		    
-             <TableRow>
-                 
-                 <TextView
-		             android:id="@+id/contact_properties_content_text"
-		             android:layout_width="wrap_content"
-		             android:layout_height="60dp"
-		             android:text="@string/contact_properties_content"
-		             android:paddingLeft="30dp"
-		             android:paddingRight="5dp"
-		             android:paddingTop="18dp"
-					 android:layout_gravity="center_vertical|left"
-					 android:textStyle="bold"
-					 android:textColor="@color/contact_properties_text_content" />
-                 
-                 <TextView
-		             android:id="@+id/contact_properties_content_detailed"
-		             android:layout_width="wrap_content"
-		             android:layout_height="60dp"
-		             android:paddingTop="18dp"
-					 android:layout_gravity="center_vertical|right"
-					 android:textColor="@color/contact_properties_content_detailed"
-					 android:paddingRight="100dp" />
-                 
-             	<ImageButton 
-             	    android:id="@+id/contact_properties_content_eye"
-             	    android:layout_width="wrap_content"
-             	    android:layout_height="wrap_content"
-             	    android:src="@drawable/contact_properties_content_eye"
-             	    android:paddingTop="22dp"
-             	    android:background="@null" />
-             	
-             </TableRow>
-       		    
-         </TableLayout>
-         
-     </RelativeLayout>
-     
-     <TableLayout 
-         android:layout_width="wrap_content"
-       	 android:layout_height="wrap_content" 
-       	 android:layout_gravity="center"
-       	 android:layout_below="@id/contact_properties_content" >
-         
-         <TableRow>
-             <TextView
-		             android:id="@+id/contact_properties_info_menu_email"
-		             android:layout_width="wrap_content"
-		             android:layout_height="wrap_content"
-		             android:text="@string/contact_properties_info_email"
-		             android:textColor="@color/contact_properties_info_menu"
-					 android:layout_gravity="center_vertical|left"
-					 android:textStyle="bold"
-					 android:paddingLeft="30dp"
-					 android:paddingTop="15dp" />
-             
-             <TextView
-		             android:id="@+id/contact_properties_info_data_email"
-		             android:layout_width="wrap_content"
-		             android:layout_height="wrap_content"
-		             android:textColor="@color/contact_properties_info_data"
-					 android:layout_gravity="center_vertical|left" 
-					 android:paddingLeft="4dp"
-					 android:paddingTop="15dp"/>
-         </TableRow>
-         
-         <TableRow>
-             <TextView
-		             android:id="@+id/contact_properties_info_menu_added"
-		             android:layout_width="wrap_content"
-		             android:layout_height="wrap_content"
-		             android:text="@string/contact_properties_info_added"
-		             android:textColor="@color/contact_properties_info_menu"
-					 android:layout_gravity="center_vertical|left"
-					 android:textStyle="bold"
-					 android:paddingLeft="30dp"
-					 android:paddingTop="7dp" />
-             
-             <TextView
-		             android:id="@+id/contact_properties_info_data_added"
-		             android:layout_width="wrap_content"
-		             android:layout_height="wrap_content"
-		             android:text="November 22, 2013"
-		             android:textColor="@color/contact_properties_info_data"
-					 android:layout_gravity="center_vertical|left"
-					 android:paddingLeft="4dp"
-					 android:paddingTop="7dp" />
-         </TableRow>
-         
-         
-     </TableLayout>
+    <com.mega.components.RoundedImageView
+        android:id="@+id/contact_properties_image"
+        android:layout_width="270dp"
+        android:layout_height="270dp"
+        android:layout_centerHorizontal="true"
+        android:paddingBottom="10dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:paddingTop="10dp"
+        rounded:border_color="@color/border_file_properties"
+        rounded:border_width="2dp"
+        rounded:corner_radius="135dp" />
+
+    <TableLayout
+        android:id="@+id/contact_properties_content_table"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/contact_properties_image"
+        android:background="@color/black" >
+
+        <TableRow>
+
+           <TextView
+              android:id="@+id/contact_properties_name"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:paddingTop="25dp"
+              android:textSize="20sp"
+              android:gravity="center"
+              android:textColor="@color/white" 
+             android:textStyle="bold" />
+            
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:id="@+id/contact_properties_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="35dp" 
+                android:gravity="center"               
+                android:textColor="@color/white"/>
+        </TableRow>
+
+    </TableLayout>
+
+    <Button
+        android:id="@+id/shared_folders_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
+        android:background="@drawable/btn_shared_folder_holo_light"
+        android:text="@string/menu_add_contact"
+        android:textColor="@color/black" >
+    </Button>
+
 </RelativeLayout>
-</ScrollView>
