--- a/res/layout/item_contact_grid.xml
+++ b/res/layout/item_contact_grid.xml
@@ -77,7 +77,7 @@
 	        android:id="@+id/contact_grid_three_dots1"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:src="@drawable/ic_three_dots"
+	        android:src="@drawable/action_selector_ic"
 			android:background="@null" 
 			android:paddingTop="6dp"
 	        android:paddingLeft="2dp"
@@ -215,7 +215,7 @@
 	        android:id="@+id/contact_grid_three_dots2"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:src="@drawable/ic_three_dots"
+	        android:src="@drawable/action_selector_ic"
 			android:background="@null" 
 			android:paddingTop="6dp"
 	        android:paddingLeft="2dp"
