--- a/res/layout/item_shared_folder.xml
+++ b/res/layout/item_shared_folder.xml
@@ -48,7 +48,7 @@
         android:id="@+id/shared_folder_contact_three_dots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_three_dots"
+        android:src="@drawable/action_selector_ic"
 		android:background="@null" 
         android:layout_alignTop="@id/shared_folder_contact_name"
         android:layout_alignParentRight="true"
@@ -82,7 +82,7 @@
 		            android:id="@+id/shared_folder_permissions_option"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
-		            android:src="@drawable/permissions_button"
+		            android:src="@drawable/permissions_ic"
 		            android:paddingLeft="30dp"
 		            android:paddingTop="10dp"
 		            android:background="@null" 
