--- a/res/layout/item_contact_list.xml
+++ b/res/layout/item_contact_list.xml
@@ -52,7 +52,7 @@
         android:id="@+id/contact_list_three_dots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_three_dots"
+        android:src="@drawable/action_selector_ic"
 		android:background="@null" 
         android:layout_alignTop="@id/contact_list_name"
         android:layout_alignParentRight="true"
