--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -61,7 +61,7 @@
         android:id="@+id/file_list_three_dots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_three_dots"
+        android:src="@drawable/action_selector_ic"
 		android:background="@null" 
         android:layout_alignTop="@id/file_list_filename"
         android:layout_alignParentRight="true"
