--- a/res/layout/item_offline_grid.xml
+++ b/res/layout/item_offline_grid.xml
@@ -56,7 +56,7 @@
 	        android:id="@+id/offline_grid_three_dots1"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:src="@drawable/ic_three_dots"
+	        android:src="@drawable/action_selector_ic"
 			android:background="@null" 
 			android:paddingTop="10dp"
 	        android:paddingLeft="2dp"
@@ -168,7 +168,7 @@
 	        android:id="@+id/offline_grid_three_dots2"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:src="@drawable/ic_three_dots"
+	        android:src="@drawable/action_selector_ic"
 			android:background="@null" 
 			android:paddingTop="10dp"
 	        android:paddingLeft="2dp"
