--- a/res/layout/item_rubbishbin_grid.xml
+++ b/res/layout/item_rubbishbin_grid.xml
@@ -55,7 +55,7 @@
 	        android:id="@+id/rubbishbin_grid_three_dots1"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:src="@drawable/ic_three_dots"
+	        android:src="@drawable/action_selector_ic"
 			android:background="@null" 
 			android:paddingTop="10dp"
 	        android:paddingLeft="2dp"
@@ -170,7 +170,7 @@
 	        android:id="@+id/rubbishbin_grid_three_dots2"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:src="@drawable/ic_three_dots"
+	        android:src="@drawable/action_selector_ic"
 			android:background="@null" 
 			android:paddingTop="10dp"
 	        android:paddingLeft="2dp"
