--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
 	    android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center" >
+        android:gravity="center_horizontal" >
         
 	    <LinearLayout 
 	        android:layout_width="match_parent"
@@ -139,16 +139,16 @@
         <LinearLayout
 		    android:id="@+id/login_logging_in_layout"
 		    android:layout_width="fill_parent"
-		    android:layout_height="fill_parent"
+		    android:layout_height="wrap_content"
 		    android:orientation="vertical"
-		    android:gravity="center_horizontal|center_vertical" >
+		    android:gravity="center_horizontal" >
         
 		    <ImageView 
 		        android:id="@+id/login_mega_logo"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:src="@drawable/mega_ic"
-		        android:layout_marginTop="100dp"/>
+		        android:layout_marginTop="20dp"/>
 		    
 		    <TextView
 		        android:id="@+id/login_query_signup_link_text"
