--- a/res/layout/activity_manager.xml
+++ b/res/layout/activity_manager.xml
@@ -24,12 +24,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TabWidget
-                android:id="@android:id/tabs"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"/>
+           <TabWidget
+            android:id="@android:id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+       	   </TabWidget>
 
             <FrameLayout
                 android:id="@android:id/tabcontent"
