--- a/res/layout/activity_filestorage.xml
+++ b/res/layout/activity_filestorage.xml
@@ -47,11 +47,22 @@
         android:background="@color/mega" />
 
     <Button
+       	android:id="@+id/file_storage_button"
+       	android:layout_gravity="center"
+       	android:layout_height="55dp"
+       	android:layout_width="fill_parent"
+       	android:layout_alignParentBottom="true"
+       	android:background="@drawable/btn_default_holo_light_without_corners"
+       	android:textColor="@color/button_text">
+    </Button>
+    
+    <!--  
+    <Button
         android:id="@+id/file_storage_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_gravity="center" />
+        android:layout_gravity="center" />-->
 
     <ListView
         android:id="@+id/file_storage_list_view"
