--- a/res/layout/fragment_contactsgrid.xml
+++ b/res/layout/fragment_contactsgrid.xml
@@ -9,8 +9,19 @@
         android:id="@+id/contact_grid_view_browser"
         android:layout_width="match_parent"
         android:layout_height="match_parent" 
-        android:dividerHeight="0dp"
-		android:divider="@null">
+        android:layout_alignParentTop="true"
+		android:layout_above="@+id/add_contact_button">
     </ListView>
+    
+	<Button
+       	android:id="@+id/add_contact_button"
+       	android:layout_gravity="center"
+       	android:layout_height="55dp"
+       	android:layout_width="fill_parent"
+       	android:layout_alignParentBottom="true"
+       	android:background="@drawable/btn_default_holo_light_without_corners"
+       	android:textColor="@color/button_text"
+       	android:text="@string/menu_add_contact" >
+    </Button>
 
 </RelativeLayout>
