--- a/res/layout/fragment_contactslist.xml
+++ b/res/layout/fragment_contactslist.xml
@@ -7,14 +7,16 @@
     <ListView
         android:id="@+id/contacts_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content" 
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/add_contact_button">
     </ListView>
     
     
-    <Button
+	<Button
        	android:id="@+id/add_contact_button"
        	android:layout_gravity="center"
-       	android:layout_height="wrap_content"
+       	android:layout_height="55dp"
        	android:layout_width="fill_parent"
        	android:layout_alignParentBottom="true"
        	android:background="@drawable/btn_default_holo_light_without_corners"
