--- a/res/layout/activity_my_account.xml
+++ b/res/layout/activity_my_account.xml
@@ -149,8 +149,7 @@
         	style="@style/button_MEGA"
         	android:id="@+id/export_master_key"
         	android:layout_gravity="center"
-        	android:layout_marginTop="20dp"
-        	android:text="@string/action_export_master_key" >
+        	android:layout_marginTop="20dp">
     	</Button>
     	
     	<Button
