--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -39,6 +39,8 @@
     <color name="color_default_avatar_phone">#777777</color>
     
     
+    <color name="dark_grey_cloud_drive">#6d6f70</color>
+    
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
 </resources>
