--- a/res/menu/activity_manager.xml
+++ b/res/menu/activity_manager.xml
@@ -63,7 +63,7 @@
 	    android:id="@+id/action_select"
 	    android:orderInCategory="110"
 	    android:showAsAction="never"
-	    android:title="@string/action_select"
+	    android:title="@string/action_select_all"
 	    android:icon="@drawable/ic_action_bar_null"
 	    MEGA:showAsAction="never" />
 	
