--- a/res/menu/activity_manager.xml
+++ b/res/menu/activity_manager.xml
@@ -68,6 +68,14 @@
 	    MEGA:showAsAction="never" />
 	
 	<item
+	    android:id="@+id/action_unselect"
+	    android:orderInCategory="110"
+	    android:showAsAction="never"
+	    android:title="@string/action_unselect_all"
+	    android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" />
+	
+	<item
 	    android:id="@+id/action_menu_sort_by"
 	    android:orderInCategory="115"
 	    android:showAsAction="never"
